--- a/resep_api/package.json
+++ b/resep_api/package.json
@@ -15,6 +15,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongoose": "^8.7.2",
     "nodemailer": "^6.9.15"
   }
