--- a/resep_api/.env
+++ b/resep_api/.env
@@ -10,3 +10,7 @@ MIDTRANS_SERVER_KEY=SB-Mid-server-4QNN3K03AI3YlE0uoonChFDK
 MIDTRANS_CLIENT_KEY=SB-Mid-client-Knm7trqATazHyi0E
 
 MIDTRANS_IS_PRODUCTION=FALSE
+
+MIDTRANS_ENV=sandbox
+
+PREMIUM_AMOUNT=1000
